[refactor] 插入功能已完成，需要更多测试